# MoneyEvolutionTracker

./: .gitignore  MoneyTracker.spec  README.md  main.py  pyproject.toml
.github/workflows/: audit.yml
templates/: index.html
tests/: test_main.py
