[project]
name = "moneytracking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "matplotlib>=3.11.0",
    "rumps>=0.4.0",
    "tkcalendar>=1.6.1",
]

[project.scripts]
patrimoine = "main:main"
patrimoine-cli = "main:run_cli"
patrimoine-gui = "main:run_web_gui"

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
]



